--- a/SingularityUI/app/views/templates/task.hbs
+++ b/SingularityUI/app/views/templates/task.hbs
@@ -22,7 +22,7 @@
                         {{#eachWithFn taskUpdates}}
                             <tr>
                                 <td><span title="{{ statusUpdate }}">{{ statusUpdateHuman }}</span></td>
-                                <td><span>{{ statusMessage }}</span></td>
+                                <td>{{ statusMessage }}</td>
                                 <td><span title="{{ timestamp }}">{{ timestampHuman }}</span></td>
                             </tr>
                         {{/eachWithFn}}
