--- a/SingularityUI/app/views/templates/tasksScheduled.hbs
+++ b/SingularityUI/app/views/templates/tasksScheduled.hbs
@@ -19,7 +19,7 @@
                         <tr data-task-id="{{ id }}">
                             <td><span title="{{ id }}">{{#hardBreak name}}{{/hardBreak}}</span></td>
                             <td><span title="{{ nextRunAt }}">{{ nextRunAtHuman }}</span></td>
-                            <td><span><a data-task-id="{{ id }}" class="dont-route view-json">JSON</a></span></td>
+                            <td><a data-task-id="{{ id }}" class="dont-route view-json">JSON</a></td>
                         </tr>
                     {{/eachWithFn}}
                 </tbody>
