--- a/SingularityUI/app/views/templates/webhooks.hbs
+++ b/SingularityUI/app/views/templates/webhooks.hbs
@@ -14,7 +14,7 @@
                 <tbody>
                     {{#eachWithFn webhooks}}
                         <tr>
-                            <td><span><a target="_blank" href="{{ url }}">{{#hardBreak url}}{{/hardBreak}}</a></span></td>
+                            <td><a target="_blank" href="{{ url }}">{{#hardBreak url}}{{/hardBreak}}</a></td>
                         </tr>
                     {{/eachWithFn}}
                 </tbody>
