--- a/SingularityUI/app/views/templates/requestsPending.hbs
+++ b/SingularityUI/app/views/templates/requestsPending.hbs
@@ -20,7 +20,7 @@
                         {{#eachWithFn requests}}
                             <tr data-request-id="{{ id }}">
                                 <td>{{#hardBreak id}}{{/hardBreak}}</td>
-                                <td><span>{{ pendingType }}</span></td>
+                                <td>{{ pendingType }}</td>
                             </tr>
                         {{/eachWithFn}}
                     </tbody>
