--- a/SingularityUI/app/views/templates/tasksActive.hbs
+++ b/SingularityUI/app/views/templates/tasksActive.hbs
@@ -21,13 +21,13 @@
                 <tbody>
                     {{#eachWithFn tasks}}
                         <tr data-task-id="{{ id }}">
-                            <td><span><a title="{{ id }}" href="/singularity/task/{{ id }}" data-route="task/{{ id }}">{{#hardBreak name}}{{/hardBreak}}</a></span></td>
+                            <td><a title="{{ id }}" href="/singularity/task/{{ id }}" data-route="task/{{ id }}">{{#hardBreak name}}{{/hardBreak}}</a></td>
                             <td><span title="{{ startedAt }}">{{ startedAtHuman }}</span></td>
-                            <td><span>{{ host }}</span></td>
-                            <td><span>{{ rack }}</span></td>
-                            <td><span>{{ resources.cpus }}</span></td>
-                            <td sorttable_customkey="{{ resources.memoryMb }}"><span>{{ memoryHuman }}</span></td>
-                            <td><span><a data-task-id="{{ id }}" class="dont-route view-json">JSON</a></span></td>
+                            <td>{{ host }}</td>
+                            <td>{{ rack }}</td>
+                            <td>{{ resources.cpus }}</td>
+                            <td sorttable_customkey="{{ resources.memoryMb }}">{{ memoryHuman }}</td>
+                            <td><a data-task-id="{{ id }}" class="dont-route view-json">JSON</a></td>
                         </tr>
                     {{/eachWithFn}}
                 </tbody>
