--- a/SingularityUI/app/views/templates/dashboard.hbs
+++ b/SingularityUI/app/views/templates/dashboard.hbs
@@ -4,44 +4,36 @@
 
 <section>
     <div class="page-header">
-        <h1>Overview</h1>
+        <h1>Hosts</h1>
     </div>
-    <div class="row-fluid">
-        <div class="span3">
-            <div class="well">
-                <div class="big-number">
-                    <div class="number">{{ state.driverStatusHuman }}</div>
-                    <div class="number-label">Driver Status</div>
-                </div>
-            </div>
-        </div>
-        <div class="span3">
-            <div class="well">
-                <div class="big-number">
-                    <div class="number">{{ state.uptimeHuman }}</div>
-                    <div class="number-label">Uptime</div>
-                </div>
-            </div>
-        </div>
-        <div class="span3">
-            <div class="well">
-                <a class="big-number-link" href="/singularity/webhooks" data-route="webhooks">
+    {{#eachWithFn state.hostStates}}
+        <div class="row-fluid">
+            <div class="span4">
+                <div class="well">
                     <div class="big-number">
-                        <div class="number">{{ state.numWebhooks }}</div>
-                        <div class="number-label">Webhooks</div>
+                        <div class="number">{{ driverStatusHuman }}</div>
+                        <div class="number-label">Driver Status</div>
                     </div>
-                </a>
+                </div>
             </div>
-        </div>
-        <div class="span3">
-            <div class="well">
-                <div class="big-number">
-                    <div class="number-label" style="color: inherit; line-height: 1.8em">{{ state.millisSinceLastOfferHuman }}</div>
-                    <div class="number-label">since last offer</div>
+            <div class="span4">
+                <div class="well">
+                    <div class="big-number">
+                        <div class="number">{{ uptimeHuman }}</div>
+                        <div class="number-label">Uptime</div>
+                    </div>
+                </div>
+            </div>
+            <div class="span4">
+                <div class="well">
+                    <div class="big-number">
+                        <div class="number-label" style="color: inherit; line-height: 1.8em">{{ millisSinceLastOfferHuman }}</div>
+                        <div class="number-label">since last offer</div>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
+    {{/eachWithFn}}
 </section>
 
 <section>
@@ -192,6 +184,24 @@
                     </div>
                 </div>
             </a>
+        </div>
+    </div>
+</section>
+
+<section>
+    <div class="page-header">
+        <h1>Webhooks</h1>
+    </div>
+    <div class="row-fluid">
+        <div class="span4">
+            <div class="well">
+                <a class="big-number-link" href="/singularity/webhooks" data-route="webhooks">
+                    <div class="big-number">
+                        <div class="number">{{ state.numWebhooks }}</div>
+                        <div class="number-label">Webhooks</div>
+                    </div>
+                </a>
+            </div>
         </div>
     </div>
 </section>
