--- a/SingularityUI/app/views/templates/requestsPending.hbs
+++ b/SingularityUI/app/views/templates/requestsPending.hbs
@@ -4,7 +4,7 @@
 
 <section>
     <div class="row-fluid">
-        <input type="search" placeholder="Search requests..." required />
+        <input type="search" placeholder="Filter requests..." required />
     </div>
     <div class="row-fluid">
         <div class="span12">
