--- a/SingularityUI/app/views/templates/tasksScheduled.hbs
+++ b/SingularityUI/app/views/templates/tasksScheduled.hbs
@@ -3,7 +3,7 @@
 </header>
 
 <section>
-    <input type="search" placeholder="Search tasks..." required />
+    <input type="search" placeholder="Filter tasks..." required />
     <div class="row-fluid">
         <div class="span12">
             <table class="table sortTable">
