--- a/SingularityUI/app/views/templates/tasksActive.hbs
+++ b/SingularityUI/app/views/templates/tasksActive.hbs
@@ -22,7 +22,7 @@
                     {{#eachWithFn tasks}}
                         <tr data-task-id="{{ id }}">
                             <td><a title="{{ id }}" href="/singularity/task/{{ id }}" data-route="task/{{ id }}">{{#hardBreak name}}{{/hardBreak}}</a></td>
-                            <td><span title="{{ startedAt }}">{{ startedAtHuman }}</span></td>
+                            <td sorttable_customkey="{{ startedAt }}"><span title="{{ startedAt }}">{{ startedAtHuman }}</span></td>
                             <td>{{ host }}</td>
                             <td>{{ rack }}</td>
                             <td>{{ resources.cpus }}</td>
