darkstrap styles for input placeholders

--- a/SingularityUI/app/styles/reset.styl
+++ b/SingularityUI/app/styles/reset.styl
@@ -22,6 +22,20 @@ a
 :-ms-input-placeholder
     color rgba(0, 0, 0, .3)
 
+html.darkstrap
+
+    ::-webkit-input-placeholder
+        color rgba(255, 255, 255, .2)
+
+    :-moz-placeholder
+        color rgba(255, 255, 255, .2)
+
+    ::-moz-placeholder
+        color rgba(255, 255, 255, .2)
+
+    :-ms-input-placeholder
+        color rgba(255, 255, 255, .2)
+
 input[type="search"][required]
     position relative
     padding .1rem 1.1rem .1rem .25rem
