Improvements to the dark theme

--- a/SingularityUI/app/styles/darkstrap.styl
+++ b/SingularityUI/app/styles/darkstrap.styl
@@ -53,7 +53,7 @@ html.darkstrap
 
     .page-header
         box-shadow none
-        border-bottom 1px solid #121212
+        border-bottom 1px solid #3c3c3c
 
     h1, h2, h3, h4, h5, h6
         color #e6e6e6
@@ -209,7 +209,7 @@ html.darkstrap
         thead
             color white
         td
-            border-top-color #666
+            border-top-color #363636
 
     .table-striped tr:nth-child(2n+1)
         td, th
