Reset border-radius styling on search inputs

--- a/SingularityUI/app/styles/reset.styl
+++ b/SingularityUI/app/styles/reset.styl
@@ -37,6 +37,7 @@ html.darkstrap
         color rgba(255, 255, 255, .2)
 
 input[type="search"][required]
+    border-radius 0
     position relative
     padding .1rem 1.1rem .1rem .25rem
 
