Switch to my new sortable plugin (https://github.com/adamschwartz/sortable)
- Uses documentFragments for huge performance boost when sorting large tables
- Can disable sort for individual column (used for "JSON" link columns)
- A quarter of the size of the old sortTable library
- Much cleaner markup
- Uses data attributes instead of odd class names or sorttable_ prefixed attributes
- Better styles

--- a/SingularityUI/app/views/templates/dashboard.hbs
+++ b/SingularityUI/app/views/templates/dashboard.hbs
@@ -7,7 +7,7 @@
         <h1>Hosts</h1>
     </div>
     <div class="row-fluid">
-        <table class="table sortTable">
+        <table class="table" data-sortable="true">
             <thead>
                 <tr>
                     <th>Hostname</th>
@@ -21,8 +21,8 @@
                     <tr>
                         <td>{{#hardBreak hostname}}{{/hardBreak}}</td>
                         <td>{{ driverStatusHuman }}</td>
-                        <td sorttable_customkey="{{ uptime }}">{{ uptimeHuman }}</td>
-                        <td sorttable_customkey="{{ millisSinceLastOffer }}">{{ millisSinceLastOfferHuman }}</td>
+                        <td data-value="{{ uptime }}">{{ uptimeHuman }}</td>
+                        <td data-value="{{ millisSinceLastOffer }}">{{ millisSinceLastOfferHuman }}</td>
                     </tr>
                 {{/eachWithFn}}
             </tbody>
