--- a/SingularityUI/app/views/templates/racks.hbs
+++ b/SingularityUI/app/views/templates/racks.hbs
@@ -9,7 +9,7 @@
     <div class="row-fluid">
         <div class="span12">
             {{#if racksActive.length}}
-                <table class="table sortTable">
+                <table class="table" data-sortable="true">
                     <thead>
                         <tr>
                             <th>Rack</th>
@@ -37,7 +37,7 @@
     <div class="row-fluid">
         <div class="span12">
             {{#if racksDead.length}}
-                <table class="table sortTable">
+                <table class="table" data-sortable="true">
                     <thead>
                         <tr>
                             <th>Rack</th>
@@ -65,7 +65,7 @@
     <div class="row-fluid">
         <div class="span12">
             {{#if racksDecomissioning.length}}
-                <table class="table sortTable">
+                <table class="table" data-sortable="true">
                     <thead>
                         <tr>
                             <th>Rack</th>
