--- a/SingularityUI/app/views/templates/searchResults.hbs
+++ b/SingularityUI/app/views/templates/searchResults.hbs
@@ -2,7 +2,7 @@
     {{#if tasksResults}}
         <div class="row-fluid">
             <h2>Tasks</h2>
-            <table class="table sortTable">
+            <table class="table" data-sortable="true">
                 <thead>
                     <tr>
                         <th>Name</th>
@@ -15,7 +15,7 @@
                     {{#eachWithFn tasksResults}}
                         <tr>
                             <td><a title="{{ id }}" href="/singularity/task/{{ id }}" data-route="task/{{ id }}">{{#hardBreak name}}{{/hardBreak}}</a></td>
-                            <td sorttable_customkey="{{ startedAt }}"><span title="{{ startedAt }}">{{ startedAtHuman }}</span></td>
+                            <td data-value="{{ startedAt }}"><span title="{{ startedAt }}">{{ startedAtHuman }}</span></td>
                             <td>{{ host }}</td>
                             <td>{{ rack }}</td>
                         </tr>
@@ -32,7 +32,7 @@
     {{#if requestsResults}}
         <div class="row-fluid">
             <h2>Results</h2>
-            <table class="table sortTable">
+            <table class="table" data-sortable="true">
                 <thead>
                     <tr>
                         <th>Name</th>
@@ -45,7 +45,7 @@
                     {{#eachWithFn requestsResults}}
                         <tr>
                             <td><a title="{{ id }}" href="/singularity/request/{{ id }}" data-route="request/{{ id }}">{{#hardBreak name}}{{/hardBreak}}</a></td>
-                            <td sorttable_customkey="{{ timestamp }}"><span title="{{ timestamp }}">{{ timestampHuman }}</span></td>
+                            <td data-value="{{ timestamp }}"><span title="{{ timestamp }}">{{ timestampHuman }}</span></td>
                             <td>{{ instances }}</td>
                             <td>{{ daemon }}</td>
                         </tr>
