--- a/SingularityUI/app/views/templates/slaves.hbs
+++ b/SingularityUI/app/views/templates/slaves.hbs
@@ -9,7 +9,7 @@
     <div class="row-fluid">
         <div class="span12">
             {{#if slavesActive.length}}
-                <table class="table sortTable">
+                <table class="table" data-sortable="true">
                     <thead>
                         <tr>
                             <th>Slave</th>
@@ -37,7 +37,7 @@
     <div class="row-fluid">
         <div class="span12">
             {{#if slavesDead.length}}
-                <table class="table sortTable">
+                <table class="table" data-sortable="true">
                     <thead>
                         <tr>
                             <th>Slave</th>
@@ -65,7 +65,7 @@
     <div class="row-fluid">
         <div class="span12">
             {{#if slavesDecomissioning.length}}
-                <table class="table sortTable">
+                <table class="table" data-sortable="true">
                     <thead>
                         <tr>
                             <th>Slave</th>
