--- a/SingularityUI/app/views/templates/webhooks.hbs
+++ b/SingularityUI/app/views/templates/webhooks.hbs
@@ -5,7 +5,7 @@
 <section>
     <div class="row-fluid">
         <div class="span12">
-            <table class="table sortTable">
+            <table class="table" data-sortable="true">
                 <thead>
                     <tr>
                         <th>Webhook</th>
