--- a/SingularityUI/app/views/templates/requestsActive.hbs
+++ b/SingularityUI/app/views/templates/requestsActive.hbs
@@ -28,7 +28,11 @@
                                 <td>{{ deployUser }}</td>
                                 <td>{{ instances }}</td>
                                 <td>{{ daemon }}</td>
-                                <td><a data-request-id="{{ id }}" class="dont-route view-json">JSON</a></td>
+                                <td>
+                                    <a data-request-id="{{ id }}" class="dont-route view-json">JSON</a>
+                                    &nbsp;&nbsp;
+                                    <a data-request-id="{{ id }}" class="dont-route" data-action="remove" data-url="{{ url }}">Remove</a>
+                                </td>
                             </tr>
                         {{/eachWithFn}}
                     </tbody>
