--- a/SingularityUI/app/views/templates/tasksActive.hbs
+++ b/SingularityUI/app/views/templates/tasksActive.hbs
@@ -15,7 +15,7 @@
                         <th>Rack</th>
                         <th>CPUs</th>
                         <th>Memory</th>
-                        <th data-sort="false">JSON</th>
+                        <th data-sort="false"></th>
                     </tr>
                 </thead>
                 <tbody>
@@ -27,7 +27,11 @@
                             <td>{{ rack }}</td>
                             <td>{{ resources.cpus }}</td>
                             <td data-value="{{ resources.memoryMb }}">{{ memoryHuman }}</td>
-                            <td><a data-task-id="{{ id }}" class="dont-route view-json">JSON</a></td>
+                            <td>
+                                <a data-task-id="{{ id }}" class="dont-route view-json">JSON</a>
+                                &nbsp;&nbsp;
+                                <a data-task-id="{{ id }}" class="dont-route" data-action="remove" data-url="{{ url }}">Remove</a>
+                            </td>
                         </tr>
                     {{/eachWithFn}}
                 </tbody>
